--- a/Kaggle.ipynb
+++ b/Kaggle.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -77,67 +77,72 @@
        "      <th>Director</th>\n",
        "      <th>Stars</th>\n",
        "      <th>Votes</th>\n",
+       "      <th>Episode ID</th>\n",
+       "      <th>Season ID</th>\n",
+       "      <th>Director ID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1994</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>The One Where Monica Gets a Roommate: The Pilot</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Monica and the gang introduce Rachel to the \"r...</td>\n",
-       "      <td>James Burrows</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>7440</td>\n",
+       "      <th>234</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>10</td>\n",
+       "      <td>e_17</td>\n",
+       "      <td>The Last One: Part 1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Erica gives birth to the baby that Monica and ...</td>\n",
+       "      <td>Kevin Bright</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>6221</td>\n",
+       "      <td>10_17</td>\n",
+       "      <td>s_10</td>\n",
+       "      <td>DI_Keh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1994</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>The One with the Sonogram at the End</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Ross finds out his ex-wife is pregnant. Rachel...</td>\n",
-       "      <td>James Burrows</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>4888</td>\n",
+       "      <th>235</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>10</td>\n",
+       "      <td>e_18</td>\n",
+       "      <td>The Last One: Part 2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Phoebe races Ross to the airport in a bid to s...</td>\n",
+       "      <td>Kevin Bright</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>10381</td>\n",
+       "      <td>10_18</td>\n",
+       "      <td>s_10</td>\n",
+       "      <td>DI_Keh</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year_of_prod  Season  Episode Number  \\\n",
-       "0          1994       1               1   \n",
-       "1          1994       1               2   \n",
+       "     Year_of_prod  Season Episode Number         Episode_Title  Duration  \\\n",
+       "234          2004      10           e_17  The Last One: Part 1        30   \n",
+       "235          2004      10           e_18  The Last One: Part 2        30   \n",
        "\n",
-       "                                     Episode_Title  Duration  \\\n",
-       "0  The One Where Monica Gets a Roommate: The Pilot        22   \n",
-       "1             The One with the Sonogram at the End        22   \n",
+       "                                               Summary      Director  Stars  \\\n",
+       "234  Erica gives birth to the baby that Monica and ...  Kevin Bright    9.5   \n",
+       "235  Phoebe races Ross to the airport in a bid to s...  Kevin Bright    9.7   \n",
        "\n",
-       "                                             Summary       Director  Stars  \\\n",
-       "0  Monica and the gang introduce Rachel to the \"r...  James Burrows    8.3   \n",
-       "1  Ross finds out his ex-wife is pregnant. Rachel...  James Burrows    8.1   \n",
-       "\n",
-       "   Votes  \n",
-       "0   7440  \n",
-       "1   4888  "
+       "     Votes Episode ID Season ID Director ID  \n",
+       "234   6221      10_17      s_10      DI_Keh  \n",
+       "235  10381      10_18      s_10      DI_Keh  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head(2)"
+    "data.tail(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
