--- a/SQL.ipynb
+++ b/SQL.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "import os \n",
     "import dotenv\n",
-    "\n",
+    "import pandas as pd\n",
     "import sqlalchemy as alch\n",
     "from getpass import getpass"
    ]
@@ -92,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f758840e910>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc9677faf10>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,16 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f758840ed60>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc9a04ef9d0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f75895938b0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc9677dce50>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,16 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f7588594ca0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc9683617f0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f758840eaf0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc9677dcc70>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "2  Monica becomes irritated when everyone likes h...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,16 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f758852e910>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc9677dcf40>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,16 +371,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f755333fb20>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc9683677f0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "9       s_9              24"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,16 +530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f75883c1ee0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc9677dcdc0>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,16 +552,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f7588594cd0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc9677b4820>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "2           2  Michael Lembeck                  24      DI_Mic"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,16 +680,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f7552f29e50>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc96771bb20>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,16 +702,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f755304f910>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc96771b910>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
     "engine.execute(\"\"\"\n",
     "    CREATE TABLE ranking (\n",
     "    Episode_id VARCHAR(6) PRIMARY KEY,\n",
-    "    Stars INT NOT NULL,\n",
+    "    Stars FLOAT NOT NULL,\n",
     "    Votes INT NOT NULL\n",
     "  );\n",
     "\n",
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "2           2        1_3    8.2   4605"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,16 +830,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f7552e10a60>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc96771b3d0>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,16 +856,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f7552f29700>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc96771b5b0>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,16 +882,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f7552f29b20>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fc96771bf10>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,6 +904,211 @@
     "    ;\n",
     "\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_sql_query(\n",
+    "\"\"\"\n",
+    "SELECT Episode_title AS Title, Summary, Name, Stars\n",
+    "FROM episodes AS e\n",
+    "LEFT JOIN directors AS d\n",
+    "ON e.Director_id = d.Director_id\n",
+    "LEFT JOIN ranking AS r\n",
+    "ON e.Episode_id = r.Episode_id\n",
+    "WHERE name = \"James Burrows\"\n",
+    "\"\"\", engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Stars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The One Where Monica Gets a Roommate: The Pilot</td>\n",
+       "      <td>Monica and the gang introduce Rachel to the 'r...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The One with Mrs. Bing</td>\n",
+       "      <td>Chandler's flamboyant romance-novelist mother ...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The One with the Candy Hearts</td>\n",
+       "      <td>As Valentine's Day approaches; Ross and his da...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The One with All the Poker</td>\n",
+       "      <td>As Rachel interviews for a new job, the girls ...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The One with the Sonogram at the End</td>\n",
+       "      <td>Ross finds out his ex-wife is pregnant. Rachel...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>The One with the Birth</td>\n",
+       "      <td>As Carol goes into labor; Ross and Susan argue...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>The One with the Thumb</td>\n",
+       "      <td>Monica becomes irritated when everyone likes h...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>The One with George Stephanopoulos</td>\n",
+       "      <td>Joey and Chandler take Ross to a hockey game t...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>The One with the Blackout</td>\n",
+       "      <td>When New York suffers from a blackout, Ross tr...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>The One Where Nana Dies Twice</td>\n",
+       "      <td>Monica and Ross mourn the loss of their grandm...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>The One Where Underdog Gets Away</td>\n",
+       "      <td>The gang's plans for Thanksgiving go awry afte...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>The One with the Prom Video</td>\n",
+       "      <td>The gang watches a home video from the night o...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>The One Where Ross and Rachel Take a Break</td>\n",
+       "      <td>Ross seeks solace at a party after a bitter fi...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>The One with the Morning After</td>\n",
+       "      <td>Ross is guilt-ridden after sleeping with Chloe...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>9.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>The One with All the Rugby</td>\n",
+       "      <td>Chandler runs into Janice, and finds her more ...</td>\n",
+       "      <td>James Burrows</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Title  \\\n",
+       "0   The One Where Monica Gets a Roommate: The Pilot   \n",
+       "1                            The One with Mrs. Bing   \n",
+       "2                     The One with the Candy Hearts   \n",
+       "3                        The One with All the Poker   \n",
+       "4              The One with the Sonogram at the End   \n",
+       "5                            The One with the Birth   \n",
+       "6                            The One with the Thumb   \n",
+       "7                The One with George Stephanopoulos   \n",
+       "8                         The One with the Blackout   \n",
+       "9                     The One Where Nana Dies Twice   \n",
+       "10                 The One Where Underdog Gets Away   \n",
+       "11                      The One with the Prom Video   \n",
+       "12       The One Where Ross and Rachel Take a Break   \n",
+       "13                   The One with the Morning After   \n",
+       "14                       The One with All the Rugby   \n",
+       "\n",
+       "                                              Summary           Name  Stars  \n",
+       "0   Monica and the gang introduce Rachel to the 'r...  James Burrows    8.3  \n",
+       "1   Chandler's flamboyant romance-novelist mother ...  James Burrows    8.2  \n",
+       "2   As Valentine's Day approaches; Ross and his da...  James Burrows    8.3  \n",
+       "3   As Rachel interviews for a new job, the girls ...  James Burrows    8.8  \n",
+       "4   Ross finds out his ex-wife is pregnant. Rachel...  James Burrows    8.1  \n",
+       "5   As Carol goes into labor; Ross and Susan argue...  James Burrows    8.7  \n",
+       "6   Monica becomes irritated when everyone likes h...  James Burrows    8.2  \n",
+       "7   Joey and Chandler take Ross to a hockey game t...  James Burrows    8.1  \n",
+       "8   When New York suffers from a blackout, Ross tr...  James Burrows    9.0  \n",
+       "9   Monica and Ross mourn the loss of their grandm...  James Burrows    8.1  \n",
+       "10  The gang's plans for Thanksgiving go awry afte...  James Burrows    8.2  \n",
+       "11  The gang watches a home video from the night o...  James Burrows    9.4  \n",
+       "12  Ross seeks solace at a party after a bitter fi...  James Burrows    8.5  \n",
+       "13  Ross is guilt-ridden after sleeping with Chloe...  James Burrows    9.1  \n",
+       "14  Chandler runs into Janice, and finds her more ...  James Burrows    8.5  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
