--- a/02_SQL.ipynb
+++ b/02_SQL.ipynb
@@ -34,7 +34,8 @@
     "import pandas as pd\n",
     "import sqlalchemy as alch\n",
     "from getpass import getpass\n",
-    "import requests"
+    "import requests\n",
+    "import tools.functions as fun"
    ]
   },
   {
@@ -102,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e35ce50>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76fcd550>"
       ]
      },
      "execution_count": 4,
@@ -124,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e35c820>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76fcd7c0>"
       ]
      },
      "execution_count": 5,
@@ -146,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e3169d0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76fcdb80>"
       ]
      },
      "execution_count": 6,
@@ -178,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e35c970>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76f6e970>"
       ]
      },
      "execution_count": 7,
@@ -200,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e316c40>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76f6edf0>"
       ]
      },
      "execution_count": 8,
@@ -371,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e307a30>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76effc10>"
       ]
      },
      "execution_count": 11,
@@ -393,7 +394,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e3078b0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76effb80>"
       ]
      },
      "execution_count": 12,
@@ -579,7 +580,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e293c40>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76f10340>"
       ]
      },
      "execution_count": 15,
@@ -601,7 +602,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e293df0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76f10df0>"
       ]
      },
      "execution_count": 16,
@@ -729,7 +730,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e2a47c0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76ea0af0>"
       ]
      },
      "execution_count": 19,
@@ -751,7 +752,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e2abe20>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76ea52b0>"
       ]
      },
      "execution_count": 20,
@@ -887,7 +888,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e2b2d90>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76ead430>"
       ]
      },
      "execution_count": 23,
@@ -913,7 +914,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e2b2070>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76ead1f0>"
       ]
      },
      "execution_count": 24,
@@ -939,7 +940,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1a2e2b7670>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76eb7940>"
       ]
      },
      "execution_count": 25,
@@ -1244,95 +1245,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Posting new `director`."
+    "### Posting new `director`.\n",
+    "\n",
+    "Use this example:\n",
+    "* Director id: D_pep\n",
+    "* Directors name: Pepito Perez\n",
+    "* Number of episodes: 10"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "nuevo_dir = {'Director_id':'D_pep',\n",
-    "    'Name':'Pepito Perez',\n",
-    "    'Episodes':3}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url_dir = \"http://localhost:5000/new_director\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce an id for the director: d_pep\n",
+      "Introduce director´s name: Pepito Perez\n",
+      "Introduce how many episodes the director has made: 5\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<Response [200]>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "requests.post(url_dir, data = nuevo_dir)"
+    "fun.input_director()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Posting new `Season`."
+    "[Check it here](http://localhost:5000/director_info/D_pep)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "nueva_temp = {'Season_id' : 's_12',\n",
-    "    'Season' : 12,\n",
-    "    'Year' : 2021,\n",
-    "    'Episodes' : 5}"
+    "### Posting new `Season`.\n",
+    "\n",
+    "Use this example:\n",
+    "* Season id: s_12\n",
+    "* Season number: 12\n",
+    "* Season Year: 2021\n",
+    "* Season number of episodes:20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url_temp = \"http://localhost:5000/new_season\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce an id for new season: s_12\n",
+      "Introduce a new season: 12\n",
+      "Introduce the year of the season: 2020\n",
+      "Introduce a new season: 12\n",
+      "Introduce how many episodes the season has: 14\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<Response [200]>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "requests.post(url_temp, data = nueva_temp)"
+    "fun.input_season()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Check it here](http://localhost:5000/season_info/12)"
    ]
   },
   {
@@ -1344,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,16 +1374,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "<Response [500]>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,16 +1422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "<Response [500]>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,11 +1441,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"https://media1.giphy.com/media/ZFiAPz9SvWy0Z4jMHb/giphy.gif\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [Quality check](http://localhost:5000/episodes_by_director/Pepito%20Perez)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# is everything ok??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://i.gifer.com/8IhM.gif\">"
+   ]
   }
  ],
  "metadata": {
