--- a/02_SQL.ipynb
+++ b/02_SQL.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,16 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76fcd550>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f16ccf5a7f0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76fcd7c0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b217be970>"
       ]
      },
      "execution_count": 5,
@@ -147,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76fcdb80>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b7c6cfb80>"
       ]
      },
      "execution_count": 6,
@@ -179,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76f6e970>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b7c66c250>"
       ]
      },
      "execution_count": 7,
@@ -201,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76f6edf0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b2175c5b0>"
       ]
      },
      "execution_count": 8,
@@ -372,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76effc10>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b216edbe0>"
       ]
      },
      "execution_count": 11,
@@ -394,7 +394,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76effb80>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b216edca0>"
       ]
      },
      "execution_count": 12,
@@ -580,7 +580,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76f10340>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b216ffcd0>"
       ]
      },
      "execution_count": 15,
@@ -602,7 +602,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76f10df0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b216ff550>"
       ]
      },
      "execution_count": 16,
@@ -730,7 +730,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76ea0af0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b216ffd30>"
       ]
      },
      "execution_count": 19,
@@ -752,7 +752,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76ea52b0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b21693670>"
       ]
      },
      "execution_count": 20,
@@ -888,7 +888,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76ead430>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b216a5370>"
       ]
      },
      "execution_count": 23,
@@ -914,7 +914,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76ead1f0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b216a5760>"
       ]
      },
      "execution_count": 24,
@@ -940,7 +940,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7fce76eb7940>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7f1b216a58e0>"
       ]
      },
      "execution_count": 25,
@@ -1262,9 +1262,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduce an id for the director: d_pep\n",
+      "Introduce an id for the director: D_pep\n",
       "Introduce director´s name: Pepito Perez\n",
-      "Introduce how many episodes the director has made: 5\n"
+      "Introduce how many episodes the director has made: 10\n"
      ]
     },
     {
@@ -1304,27 +1304,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduce an id for new season: s_12\n",
-      "Introduce a new season: 12\n",
-      "Introduce the year of the season: 2020\n",
-      "Introduce a new season: 12\n",
-      "Introduce how many episodes the season has: 14\n"
+      "Introduce an id for new season: s\n",
+      "Introduce a new season: s\n",
+      "Introduce the year of the season: 1\n",
+      "Introduce how many episodes the season has: 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "<Response [500]>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1382,7 @@
        "<Response [500]>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1430,7 @@
        "<Response [500]>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
