--- a/02_SQL.ipynb
+++ b/02_SQL.ipynb
@@ -55,6 +55,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also need to run de python file called `sqlapi.py`, in order to set the database in [localhost](http://localhost:5000)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`python3 sqlapi.py`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
